# pybox

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish-docs.yml  publish-images.yml
docs/: index.md  quickstart.md
images/base/: Dockerfile
images/scipy/: Dockerfile
images/scipy-zh-cn/: Dockerfile  requirements.txt
quickstart/: index.html
search/: search_index.json
src/pybox/: __about__.py  __init__.py  base.py  kube.py  local.py  remote.py  schema.py  utils.py
tests/: __init__.py  test_box.py  test_kube.py  test_local.py  test_remote.py  test_schema.py  test_utils.py
